Nav align bug fixed

--- a/Black_Cup_(Landing_Page)/stylesheet.css
+++ b/Black_Cup_(Landing_Page)/stylesheet.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    outline: 2px solid red;
 }
 
 header, footer {
@@ -21,6 +22,8 @@ header, footer {
 h1 {
     font-size: 24px;
     color: #f9faf8;
+    margin-left: 100px;
+    margin-right: 80%;
 }
 
 button, .callAction {
@@ -38,6 +41,15 @@ button, .callAction {
     font-size: 36px;
     color: #1f2937;
     font-weight: 900;
+}
+
+header {
+    padding: 10px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 footer {
